fix blur on Safari

--- a/client/styles/interactive/snackbar.css
+++ b/client/styles/interactive/snackbar.css
@@ -7,6 +7,7 @@
 	position:absolute;
 	background: var(--background-color-elevated);
 	box-shadow: 0 10px 12px var(--background-color);
+	-webkit-backdrop-filter: blur(16px);
 	backdrop-filter: blur(16px);
 	border-radius: 4px;
 	color: #ddd;
